# agent-intent-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: sdk-tests.yml
agent_intent_protocol/: models.py  resolver.py  server.py
docs/: aip-usage-guide.md
examples/: README.md
examples/curl/: discover.sh  execute.sh  resolve.sh
examples/go/multi_intent/: main.go
examples/go/quickstart/: main.go
examples/go/streaming/: main.go
examples/python/: multi_intent.py  quickstart.py  streaming.py
examples/typescript/: multi_intent.ts  quickstart.ts  streaming.ts
sdks/go/: README.md  client.go  client_test.go  errors.go  go.mod  models.go
sdks/go/aip/: client.go
sdks/go/examples/: basic_usage.go
sdks/python/: README.md  pyproject.toml
sdks/python/agent_intent_protocol/: __init__.py  client.py
sdks/python/examples/: basic_usage.py
sdks/python/tests/: test_resolver.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/examples/: basic_usage.ts
sdks/typescript/src/: index.ts
sdks/typescript/tests/: client.test.ts
spec/: PROTOCOL.md  error-codes.md  intent-schema-v1.json  intent-schema-v2.json
