[project]
name = "agent-intent-protocol"
version = "2.0.0"
description = "One interface for AI agents to use all JarvisClaw platform capabilities — routing, execution, and discovery via the Agent Intent Protocol."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JarvisClaw", email = "dev@jarvisclaw.ai"}
]
keywords = ["ai", "agent", "intent", "protocol", "llm", "routing", "jarvisclaw", "aip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-httpx>=0.21.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/api-jarvisclaw/agent-intent-protocol"
Documentation = "https://github.com/api-jarvisclaw/agent-intent-protocol#readme"
Repository = "https://github.com/api-jarvisclaw/agent-intent-protocol"
Issues = "https://github.com/api-jarvisclaw/agent-intent-protocol/issues"
Platform = "https://api.jarvisclaw.ai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_intent_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
